# RoboCute-Vibe-Examples

./: .gitignore  README.md  build.py  mesh_builder.py  pyproject.toml
.opencode/skills/py/: SKILL.md
.opencode/skills/py_shader/: SKILL.md
.opencode/skills/uv/: SKILL.md
3D_Camera/: README.md  __init__.py  app_3d_camera.py  camera_controller.py  camera_math.py  headless_follow_demo.py  moving_target.py  simple_demo.py  smooth_follow_demo.py  smooth_follow_headless.py  test_camera.py  test_camera_comprehensive.py  test_headless_256_frames.py
Houdini/: README.md  __init__.py  city_generator.py  houdini_nodes.py  procedural_terrain.py
Houdini/examples/: city_scene.py  forest_scene.py  scatter_example.py
Houdini/test/: test_houdini_nodes.py  test_mesh_builder.py
Licenses/: Apache-2.0.txt
Noise_Texture/: .gitignore  README.md  __init__.py  demo.py  noise_generators.py  pyproject.toml  requirements.txt  robocute_example.py  test_additional.py  test_noise.py  utils.py
Python_Mesh/: README.md  mesh_tool.py  requirements.txt  run_demo.py
Python_Mesh/core/: __init__.py  decimation.py  lod.py  repair.py  subdivision.py  utils.py
Python_Mesh/examples/: example_complete_workflow.py  example_decimation.py  example_lod.py  example_repair.py  example_subdivision.py
Python_Mesh/tests/: test_decimation.py  test_lod.py  test_lod_core.py  test_repair.py  test_subdivision.py
RobotProject/: README.md  __init__.py  astar.py  chassis.py  demo.py  dwa.py  map_system.py  mock_nodes.py  nodes.py  path_planning.py  pure_pursuit.py  rrt.py  scene_config.py  scene_multi_robot.py  scene_offroad_terrain.py  scene_warehouse_navigation.py  visualization.py  visualize_pursuit.py
diff/: compare.py  diff_regions.py  feature_matching.py  orb_diff.py  sift.py  ssim.py  surf.py  test_compare.py  test_diff_regions.py  test_feature_matching.py  test_orb_diff.py  test_sift.py  test_sift_quick.py  test_ssim.py  test_ssim_comprehensive.py
light/: light_interface.py
light/network/: rpc_client.py  rpc_server.py  tcp_client.py  tcp_group_server.py  tcp_server.py
light/tests/: test_light_interface.py
robo/: README.md  __init__.py  chassis.py  main.py  map_editor.py  path_planner.py  robot.py
robo/tests/: __init__.py  test_robo.py
timeline/: __init__.py  camera_controller.py  interpolation.py  keyframe.py  test_timeline.py  timeline.py
